--- a/Platform/CoffeelakeBoardPkg/CfgData/Template_CfgData.yaml
+++ b/Platform/CoffeelakeBoardPkg/CfgData/Template_CfgData.yaml
@@ -191,10 +191,16 @@ GPIO_TMPL: >
                        - OutputStateUnlock = Leave Pad output control unlocked, PadUnlock = Leave both Pad configuration and output control unlocked
         condition    :  $(COND_GPIO_SKIP)
         length       : 4b
+    - RxRaw_$(1) :
+        name         : RxRaw
+        type         : Combo
+        option       : 0x0:Default, 0x1:NoOverride, 0x3:RxDrive 1 internally
+        help         : > This bit determines if the selected pad state is being overridden to '1'.
+        length       : 2b
     - Reserved1_$(1) :
         name         : Reserved1
         type         : Reserved
-        length       : 3b
+        length       : 1b
     - PadNum_$(1)  :
         name         : PadNum
         type         : Reserved
