--- a/Platform/AlderlakeBoardPkg/CfgData/CfgData_MemSpd.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgData_MemSpd.yaml
@@ -2,7 +2,7 @@
 #
 #  Slim Bootloader CFGDATA Option File.
 #
-#  Copyright (c) 2020, Intel Corporation. All rights reserved.<BR>
+#  Copyright (c) 2022, Intel Corporation. All rights reserved.<BR>
 #  SPDX-License-Identifier: BSD-2-Clause-Patent
 #
 ##
@@ -89,3 +89,29 @@
                      Pointer to SPD data in Memory
       length       : 0x200
       value        : {FILE: Spd_Data_AdlPtest_DDR5.bin}
+
+- MEM_SPD6_CFG_DATA :
+  - !expand { CFGHDR_TMPL : [ MEM_SPD6_CFG_DATA, 0x8F6, 0, 0 ] }
+  - MemorySpdPtr6 :
+      name         : Memory SPD Data 6
+      type         : Table
+      option       : >
+                     0:1:HEX, 1:1:HEX, 2:1:HEX, 3:1:HEX, 4:1:HEX, 5:1:HEX, 6:1:HEX, 7:1:HEX,
+                     8:1:HEX, 9:1:HEX, A:1:HEX, B:1:HEX, C:1:HEX, D:1:HEX, E:1:HEX, F:1:HEX
+      help         : >
+                     Pointer to SPD data in Memory
+      length       : 0x200
+      value        : {FILE: Spd_Data_AdlN_Ddr5.bin}
+
+- MEM_SPD7_CFG_DATA :
+  - !expand { CFGHDR_TMPL : [ MEM_SPD7_CFG_DATA, 0x8F7, 0, 0 ] }
+  - MemorySpdPtr7 :
+      name         : Memory SPD Data 7
+      type         : Table
+      option       : >
+                     0:1:HEX, 1:1:HEX, 2:1:HEX, 3:1:HEX, 4:1:HEX, 5:1:HEX, 6:1:HEX, 7:1:HEX,
+                     8:1:HEX, 9:1:HEX, A:1:HEX, B:1:HEX, C:1:HEX, D:1:HEX, E:1:HEX, F:1:HEX
+      help         : >
+                     Pointer to SPD data in Memory
+      length       : 0x200
+      value        : {FILE: Spd_Data_AdlN_Lpddr5.bin}
