--- a/Platform/AlderlakeBoardPkg/CfgData/CfgData_Silicon.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgData_Silicon.yaml
@@ -2,7 +2,7 @@
 #
 #  Slim Bootloader CFGDATA Option File.
 #
-#  Copyright (c) 2020 - 2021, Intel Corporation. All rights reserved.<BR>
+#  Copyright (c) 2020 - 2022, Intel Corporation. All rights reserved.<BR>
 #  SPDX-License-Identifier: BSD-2-Clause-Patent
 #
 ##
@@ -436,6 +436,14 @@
                      SLP_A Minimum Assertion Width Policy. Default is 2S
       length       : 0x01
       value        : 0x4
+  - EcAvailable :
+      name         : Embedded Controller Availability
+      type         : Constant, Combo
+      option       : $EN_DIS
+      help         : >
+                     Describes whether Embedded Controller is availabile or not
+      length       : 0x01
+      value        : 0x1
   - SiliconRsvd  :
-      length       : 0x02
+      length       : 0x01
       value        : 0x00
