feat: [AZB] Add Arizona Beach platform support
This patch adds platform and silicon for Arizona Beach (AZB)
platform.

TEST=LPDDR5 AZB CRB board is able to boot to Yocto.

Signed-off-by: Aakash Panwar <aakash.panwar@intel.com>
Signed-off-by: Akshatha Thekkade <akshatha.thekkade@intel.com>
Signed-off-by: Biswas Arghya <arghya.biswas@intel.com>
Signed-off-by: Chirag Vijay Kolhe <chirag.vijay.kolhe@intel.com>
Signed-off-by: M Karuppasamy <karuppasamy.m@intel.com>
Signed-off-by: Sachin Kamat <sachin.kamat@intel.com>

--- a/.azurepipelines/azure-pipelines.yml
+++ b/.azurepipelines/azure-pipelines.yml
@@ -109,6 +109,14 @@ jobs:
         Build.Name:   "rpls"
         Build.Arch:   ""
         Build.Target: ""
+      AZB_X86_DEBUG:
+        Build.Name:   "azb"
+        Build.Arch:   ""
+        Build.Target: ""
+      AZB_X86_RELEASE:
+        Build.Name:   "azb"
+        Build.Arch:   ""
+        Build.Target: "-r"
 
 
   pool:
@@ -228,6 +236,14 @@ jobs:
         Build.Name:   "rpls"
         Build.Arch:   "-a x64"
         Build.Target: ""
+      AZB_X86_DEBUG:
+        Build.Name:   "azb"
+        Build.Arch:   ""
+        Build.Target: ""
+      AZB_X86_RELEASE:
+        Build.Name:   "azb"
+        Build.Arch:   ""
+        Build.Target: "-r"
 
   pool:
     vmImage: 'windows-2019'
