--- a/Platform/ElkhartlakeBoardPkg/CfgData/CfgData_Memory.yaml
+++ b/Platform/ElkhartlakeBoardPkg/CfgData/CfgData_Memory.yaml
@@ -1405,6 +1405,13 @@
                      Disclaimer- Warning- This must NOT be enabled for production!!! Enabling Error Injection allows attackers who have access to the Host Operating System to inject IBECC errors that can cause unintended # memory corruption and enable the leak of security data in the BIOS stolen memory regions.
       length       : 0x01
       value        : 0x00
+  - FiaLaneReversalEnable :
+      name         : FIA Lane Reversal Enable/Disable config mask
+      type         : EditNum, HEX, (0x0,0xFF)
+      help         : >
+                     Set 0x10 for M.2 NVME storage support on J4U1.
+      length       : 0x2
+      value        : 0x0
   - Dummy        :
-      length       : 0x4
+      length       : 0x2
       value        : 0x0
