[ADL/RPL] Add the missing type for SBL config data (#1852)
The type for SBL config MrcSafeConfig is missing.
Missing type will cause this item is not shown
from ConfigEditor tool.

Signed-off-by: Guo Dong <guo.dong@intel.com>

--- a/Platform/AlderlakeBoardPkg/CfgData/CfgData_Memory.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgData_Memory.yaml
@@ -188,6 +188,7 @@
       value        : 0x0
   - MrcSafeConfig :
       name         : MRC Safe Config
+      type         : Combo
       option       : $EN_DIS
       help         : >
                      Enables/Disable MRC Safe Config
