[RPL-s] Upstream RPL-S and enabling RPL-S Build checks
updated azure-pipelines.yml

Signed-off-by: Barnes <kimberly.d.barnes@intel.com>

--- a/.azurepipelines/azure-pipelines.yml
+++ b/.azurepipelines/azure-pipelines.yml
@@ -105,6 +105,10 @@ jobs:
         Build.Name:   "idv"
         Build.Arch:   "-a x64"
         Build.Target: ""
+      RPLS_X86_DEBUG:
+        Build.Name:   "rpls"
+        Build.Arch:   ""
+        Build.Target: ""
 
 
   pool:
@@ -216,7 +220,11 @@ jobs:
         Build.Name:   "idvh"
         Build.Arch:   "-a x64"
         Build.Target: ""
-
+      RPLS_X86_RELEASE:
+        Build.Name:   "rpls"
+        Build.Arch:   ""
+        Build.Target: "-r"
+        
   pool:
     vmImage: 'windows-2019'
 
