--- a/Platform/AlderlakeBoardPkg/CfgData/CfgData_Memory.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgData_Memory.yaml
@@ -1074,6 +1074,14 @@
                      Enable:Postcode via I2C, Disable: Postcode via Port80
       length       : 0x01
       value        : 0x00
+  - DisableStarv2medPrioOnNewReq :
+      name       : Enable/Disable MC Starv2Med Priority on New Request
+      type         : Combo
+      option       : $EN_DIS
+      help         : >
+                     Enable: MC Starv2Med Priority, Disable: MC Starv2Med Priority
+      length       : 0x01
+      value        : 0x00
   - Dummy        :
       length      : 0x01
       value       : 0x00
