--- a/Platform/AlderlakeBoardPkg/CfgData/CfgData_Silicon.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgData_Silicon.yaml
@@ -2,7 +2,7 @@
 #
 #  Slim Bootloader CFGDATA Option File.
 #
-#  Copyright (c) 2020 - 2022, Intel Corporation. All rights reserved.<BR>
+#  Copyright (c) 2020 - 2023, Intel Corporation. All rights reserved.<BR>
 #  SPDX-License-Identifier: BSD-2-Clause-Patent
 #
 ##
@@ -459,92 +459,36 @@
                      Describes whether Embedded Controller is availabile or not
       length       : 0x01
       value        : 0x1
-  - FusaConfigEnable :
-      name         : Enable FuSa support
+  - CpuCrashLogEnable :
+      name         : CPU CrashLog support
       type         : Combo
       option       : $EN_DIS
       help         : >
-                     Enable or Disable global FuSa support; 0- Disable; <b>1- Enable</b>.
+                     Enable CrashLog feature in CPU.
       length       : 0x01
-      value        : 0x01
-  - DisplayFusaConfigEnable :
-      name         : Fusa Display Configuration
+      value        : 0x0
+  - CrashLogReporting :
+      name         : CrashLog BERT Reporting
       type         : Combo
       option       : $EN_DIS
       help         : >
-                     Fusa (Functional Safety) Enable Fusa Feature on Display, 0- Disable, 1- Enable
+                     Enable reporting CrashLog data in ACPI BERT. Requires FSP support for CrashLog Data Collection.
       length       : 0x01
-      value        : 0x01
-  - GraphicFusaConfigEnable :
-      name         : Fusa Graphics Configuration
+      value        : 0x0
+      condition    : $SILICON_CFG_DATA.CpuCrashLogEnable != 0
+  - OpioRecenter :
+      name         : Opio Recentering Ctrl
       type         : Combo
       option       : $EN_DIS
       help         : >
-                     Fusa (Functional Safety) Enable Fusa Feature on Graphics, 0- Disable, 1- Enable
+                     Opio Recentering Disabling for Pcie Latency Improvement
       length       : 0x01
-      value        : 0x01
-  - OpioFusaConfigEnable :
-      name         : Fusa Opio Configuration
+      value        : 0x0
+  - L2QosEnumerationEn :
+      name         : L2 QOS Enumeration
       type         : Combo
       option       : $EN_DIS
       help         : >
-                     Fusa (Functional Safety) Enable Fusa Feature on Opio, 0- Disable, 1- Enable
+                     Enable L2 Qos Enumerate
       length       : 0x01
-      value        : 0x01
-  - IopFusaConfigEnable :
-      name         : Fusa Iop Configuration
-      type         : Combo
-      option       : $EN_DIS
-      help         : >
-                     Fusa (Functional Safety) Enable Fusa Feature on Iop, 0- Disable, 1- Enable
-      length       : 0x01
-      value        : 0x01
-  - PsfFusaConfigEnable :
-      name         : Fusa Psf Configuration
-      type         : Combo
-      option       : $EN_DIS
-      help         : >
-                     Fusa (Functional Safety) Enable Fusa Feature on Psf, 0- Disable, 1- Enable
-      length       : 0x01
-      value        : 0x1
-  - FusaRunStartupArrayBist :
-      name         : Fusa Run Start Up Array BIST
-      type         : Combo
-      option       : $EN_DIS
-      help         : >
-                     Enabling this will execute startup array test during boot, 0: Disable, 1: Enable
-      length       : 0x01
-      value        : 0x1
-  - FusaRunStartupScanBist :
-      name         : Fusa Run Start Up Scan BIST
-      type         : Combo
-      option       : $EN_DIS
-      help         : >
-                     Enabling this will execute startup scan test during boot, 0: Disable, 1: Enable
-      length       : 0x01
-      value        : 0x1
-  - FusaRunPeriodicScanBist :
-      name         : Fusa Run Periodic Scan BIST
-      type         : Combo
-      option       : $EN_DIS
-      help         : >
-                     Enabling this will execute periodic scan test during boot, 0: Disable, 1: Enable
-      length       : 0x01
-      value        : 0x1
-  - Module0Lockstep :
-      name         : Fusa Module 0 Lockstep Configuration
-      type         : Combo
-      option       : 0: Disable lockstep, 1: Enable lockstep for Core 0 with Core 1; Core 2 with Core 3, 2: Enable lockstep for Core 0 with Core 1, 3: Enable lockstep for Core 2 with Core 3
-      help         : >
-                     Enable/Disable Lockstep for Atom module 0, which has 4 cores;
-      length       : 0x01
-      value        : 0x1
-  - Module1Lockstep :
-      name         : Fusa Module 1 Lockstep Configuration
-      type         : Combo
-      option       : 0: Disable lockstep, 1: Enable lockstep for Core 0 with Core 1; Core 2 with Core 3, 2: Enable lockstep for Core 0 with Core 1, 3: Enable lockstep for Core 2 with Core 3
-      help         : >
-                     Enable/Disable Lockstep for Atom module 1, which has 4 cores;
-      length       : 0x01
-      value        : 0x1
-
+      value        : 0x0
