--- a/.azurepipelines/azure-pipelines.yml
+++ b/.azurepipelines/azure-pipelines.yml
@@ -105,6 +105,10 @@ jobs:
         Build.Name:   "idv"
         Build.Arch:   "-a x64"
         Build.Target: ""
+      RPLS_X86_DEBUG:
+        Build.Name:   "rpls"
+        Build.Arch:   ""
+        Build.Target: ""
 
 
   pool:
@@ -216,6 +220,14 @@ jobs:
         Build.Name:   "idvh"
         Build.Arch:   "-a x64"
         Build.Target: ""
+      RPLS_X86_RELEASE:
+        Build.Name:   "rpls"
+        Build.Arch:   ""
+        Build.Target: "-r"
+      RPLS_X64_DEBUG:
+        Build.Name:   "rpls"
+        Build.Arch:   "-a x64"
+        Build.Target: ""
 
   pool:
     vmImage: 'windows-2019'
@@ -258,5 +270,3 @@ jobs:
   - script: |
       python BuildLoader.py build $(Build.Name) $(Build.Arch) $(Build.Target) -t vs2019 -k
     displayName: 'Run $(Build.Name) build'
-
-
