--- a/Platform/.gitignore
+++ b/Platform/.gitignore
@@ -2,4 +2,5 @@ VerInfo.txt
 */VbtBin/
 !QemuBoardPkg/VbtBin/
 !CoffeelakeBoardPkg/VbtBin/
+!AlderlakeBoardPkg/VbtBin/
 !ApollolakeBoardPkg/VbtBin/Vbt_*.*
