fix: [ADL] change GPIO CfgData to use virtual group index
Different ADL PCH series group GPIO pins into different sets.
The current CfgData uses ADLS's GPIO group sets as the base, and
overwrites the GrpIdx fields via DLT files for other PCH series.
This results in two issues:
1. "CfgDataTool.py export" command failed to extract DLT files
   from SBL image, since it cannot identify the proper group
   index in CfgDataExt.bin from the base table in CfgDataInt.bin
2. When using ConfigEditor.py to configure the PadGroup field of
   GPIO Payload Selection, it will map to a wrong group index.

This patch changes the GPIO CfgData to use virtual alphabetical
group index for all PCH series, and the virtual index will be
converted to physical group ID accordingly when system configures
the GPIO pins.

Signed-off-by: Vincent Chen <vincent.chen@intel.com>

--- a/Platform/AlderlakeBoardPkg/CfgData/CfgData_GpioPadGroups.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgData_GpioPadGroups.yaml
@@ -2,11 +2,11 @@
 #
 #  Slim Bootloader CFGDATA Alder Lake GPIO pad groups.
 #
-#  Copyright (c) 2021, Intel Corporation. All rights reserved.<BR>
+#  Copyright (c) 2021 - 2023, Intel Corporation. All rights reserved.<BR>
 #  SPDX-License-Identifier: BSD-2-Clause-Patent
 #
 ##
 
 >
-0x0:GROUP_I, 0x1:GROUP_R, 0x2:GROUP_J, 0x5:GROUP_B, 0x6:GROUP_G, 0x7:GROUP_H,
-0xA:GROUP_A, 0xD:GROUP_S, 0xE:GROUP_E, 0xF:GROUP_K, 0x10:GROUP_F, 0x11:GROUP_D
+0x00:GPP_A, 0x01:GPP_B, 0x02:GPP_C, 0x03:GPP_D, 0x04:GPP_E, 0x05:GPP_F, 0x06:GPP_G, 0x07:GPP_H,
+0x08:GPP_I, 0x09:GPP_J, 0x0A:GPP_K, 0x11:GPP_R, 0x12:GPP_S, 0x13:GPP_T, 0x14:GPP_U, 0x19:GPD
