feat: update CI build
There is an error to get nasm from the log.
It looks the URL is not used correctly.
Since its URL is not changed recently, make some changes
to previous commit to check if it could be fixed.

Signed-off-by: Guo Dong <guo.dong@intel.com>

--- a/.azurepipelines/azure-pipelines.yml
+++ b/.azurepipelines/azure-pipelines.yml
@@ -253,9 +253,13 @@ jobs:
       }
       "@
       [System.Net.ServicePointManager]::CertificatePolicy = New-Object TrustAllCertsPolicy
+      echo "nasm link below is not available, comment it out to use the default version"
       Invoke-WebRequest -Uri https://www.nasm.us/pub/nasm/releasebuilds/2.14.02/win64/nasm-2.14.02-win64.zip -OutFile nasm.zip
+      echo "expand nasm"
       Expand-Archive .\nasm.zip C:\
-      echo "Download iasl-win-20221020_Signed.zip"
+
+      echo "download iasl"
+      # Download iasl-win-20221020_Signed.zip
       Invoke-WebRequest -Uri https://cdrdv2.intel.com/v1/dl/getContent/774881 -OutFile iasl.zip
       Expand-Archive .\iasl.zip C:\iasl
       echo "##vso[task.setvariable variable=nasm_prefix;]C:\nasm-2.14.02\"
