feat: [ADL] add board extension GPIO CfgData for different PCH series
- add board extension yaml files for adln, adlp, adls
  * CfgData_GpioPinConfig.yaml
  * CfgData_GpioPadGroups.yaml
- assign an invalid/unique GrpIdx for the unused GPIO group
  * e.g. 1F, 1E, ..
- adjust GrpIdx of CfgDataExt_Upx12.dlt based on adlp
- revise the payload selection information in DLT files

Signed-off-by: Vincent Chen <vincent.chen@intel.com>

--- a/Platform/AlderlakeBoardPkg/CfgData/CfgData_GpioPadGroups_adls.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgData_GpioPadGroups_adls.yaml
@@ -2,7 +2,7 @@
 #
 #  Slim Bootloader CFGDATA Alder Lake GPIO pad groups.
 #
-#  Copyright (c) 2021 - 2023, Intel Corporation. All rights reserved.<BR>
+#  Copyright (c) 2023, Intel Corporation. All rights reserved.<BR>
 #  SPDX-License-Identifier: BSD-2-Clause-Patent
 #
 ##
