--- a/Platform/CommonBoardPkg/CfgData/CfgData_Platform.yaml
+++ b/Platform/CommonBoardPkg/CfgData/CfgData_Platform.yaml
@@ -2,7 +2,7 @@
 #
 #  Slim Bootloader Platform CFGDATA Option File.
 #
-#  Copyright (c) 2020, Intel Corporation. All rights reserved.<BR>
+#  Copyright (c) 2020 - 2023, Intel Corporation. All rights reserved.<BR>
 #  SPDX-License-Identifier: BSD-2-Clause-Patent
 #
 ##
@@ -38,5 +38,5 @@
       help         : >
                      Specify the platform name, a maximum of 8 characters
       length       : 0x8
-      value        : ' '
+      value        : ''
 
