[demo] showcase boot OsBootDeviceMemory
The commit uses TGL to showcase how to boot an image from memory.

1. To boot an image from memory, it can use OsBootDeviceMemory in
   CfgData_BootOption.yaml.

2. The image to boot is MicroPython.efi. Please check the following URL
   to learn how to generate MicroPython.efi for SBL:
  https://slimbootloader.github.io/how-tos/boot-micropython.html#how-to-build-micropython-payload-module

   Note that in this demo,. the MicroPython.efi is stored under
   Platform/<platform>/Binaries

3. Similar changes shall be applicable for other platform.s

Signed-off-by: Stanley Chang <stanley.chang@intel.com>

--- a/Platform/TigerlakeBoardPkg/CfgData/CfgData_BootOption.yaml
+++ b/Platform/TigerlakeBoardPkg/CfgData/CfgData_BootOption.yaml
@@ -10,7 +10,7 @@
 
 - $ACTION      :
     page         : OS
-- !expand { BOOT_OPTION_TMPL : [ 0 ,   0    ,  20 ,    5   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
+- !expand { BOOT_OPTION_TMPL : [ 0 ,   0    ,   0 ,    7   ,   0   ,    0  ,     2 ,     1 , '!SETP/MPYM:STPY' ] }
 - !expand { BOOT_OPTION_TMPL : [ 1 , 0x9E   ,  16 ,    0   ,   0   ,    1  ,     1 ,     1 , '!IPFW/POSC' ] }
 - !expand { BOOT_OPTION_TMPL : [ 2 , 0x1F   ,  16 ,    5   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_rtcm' ] }
 - !expand { BOOT_OPTION_TMPL : [ 3 ,  0     ,  20 ,    6   ,   0   ,    0  ,     1 ,     1 , '/boot/sbl_os' ] }
