[RPL-P] Moved ucode and FSP to Silicon dir, removed PLT_SOURCE, added VBTs
FSP and microcode moved to Silicon folder to be in line with other
platforms. Removed references to PLT_SOURCE env variable. Added VBTs
and removed them from .gitignore.

Signed-off-by: Bejean Mosher <bejean.mosher@intel.com>

--- a/Platform/.gitignore
+++ b/Platform/.gitignore
@@ -1,7 +1,8 @@
 VerInfo.txt
-*/VbtBin/
+*/VbtBin/*
 !QemuBoardPkg/VbtBin/
 !CoffeelakeBoardPkg/VbtBin/
 !AlderlakeBoardPkg/VbtBin/
 !ApollolakeBoardPkg/VbtBin/Vbt_*.*
 *.json
+!RaptorlakeBoardPkg/VbtBin/Vbt_rplp*.*
