feat:[Common] boot from an image from memory
Add a new entry in CfgData_BootOption.yaml to boot from memory. The boot
device must be 7 (MEMORY), and the address of the container boot image
(CONTAINER_BOOT_SIGNATURE) can be placed at an address specified by
LBA format (i.e., use HEX prefix. EX: #0x12345678).

Example entry of CfgData_BootOption.yaml:
!expand { BOOT_OPTION_TMPL : [ 0 , 0,  0,  7,   0 ,   0 ,   0xFF ,   1 , '#0x47A31000'] }

If the address is not predefined then it can be updated in run time from
SBL shell boot option table.

Validated by loading a container image to the memory by using 'fs load'
command in SBL shell and update the load image address in boot option table.

Signed-off-by: Biswas Arghya <arghya.biswas@intel.com>

--- a/Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
+++ b/Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
@@ -96,8 +96,8 @@ BOOT_OPTION_TMPL: >
         name         : Normal OS info or LBA address
         type         : EditText
         help         : >
-                       Specify file name of normal OS or LBA address (16-byte max length).
-                       For LBA address, please use HEX prefix "#0x". EX- #0x12345678
+                       Specify file name of normal OS or LBA address or Container image memory address (16-byte max length).
+                       For LBA address or Container image memory address, please use HEX prefix "#0x". EX- #0x12345678
         condition    : ($BOOT_OPTION_CFG_DATA_$(1).ImageType_$(1) & 0x1F) < 0x1F
         length       : 0x10
         value        : $(9)
