feat: [RPL-PS] Upstream RPL-PS code.
Add RPL-PS Platform code to public repo.

Signed-off-by: Bejean Mosher <bejean.mosher@intel.com>

--- a/Platform/.gitignore
+++ b/Platform/.gitignore
@@ -6,3 +6,4 @@ VerInfo.txt
 !ApollolakeBoardPkg/VbtBin/Vbt_*.*
 *.json
 !RaptorlakeBoardPkg/VbtBin/Vbt_rplp*.*
+!RaptorlakeBoardPkg/VbtBin/VbtRplPs*.*
