feat: [MTL] Enable McLaren Island basic boot
Build command:
  python buildloader.py  build mtl
Stitch commmand:
  python Platform\MeteorlakeBoardPkg\Script\StitchIfwi.py  -b fvme
  -s Outputs\mtl\Stitch_Components.zip
  -c Platform\MeteorlakeBoardPkg\Script\StitchIfwiConfig_mcl.py
  -w \Stitchifwi_components_mtl -p mtlp -d 0xAA00001F

Verified base boot with win11/ubuntu 24 on Intel McLaren Island Reference Design Board.

Know issues:
* Dp++, HDMI 2.1 not enabling.
* S0ix not enabling.
* USB 3.2 stack CON with usb4-c not enabling.

Signed-off-by: Randy <randy.lin@intel.com>

--- a/Platform/MeteorlakeBoardPkg/CfgData/CfgData_Features.yaml
+++ b/Platform/MeteorlakeBoardPkg/CfgData/CfgData_Features.yaml
@@ -56,9 +56,17 @@
         help         : >
                        Enable/Disable ME FIPS Mode. 1:Enabled, 0:Disabled
         length       : 1b
+    - HdaVerbTable   :
+        name         : HDA Verb table customize Enable
+        type         : Combo
+        option       : $EN_DIS
+        help         : >
+                       Enable/Disable set the Azalia verb table. 1:Enabled, 0:Disabled
+        length       : 1b
+
     - Rsvd         :
         name         : Reserved
         type         : Reserved
         help         : >
                        reserved bits
-        length       : 27b
+        length       : 26b
